--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,14 +1,14 @@
 <footer>
     <div class="card text-center">
-        <div class="card-header">
-          Featured
+        <div class="card-header1">
+          Contact Us
         </div>
-        <div class="card-body">
-          <h5 class="card-title">Special title treatment</h5>
-          <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+        <div class="card-body1">
+          <h5 class="card-title">+23787382392839</h5>
+          <p class="card-text">fastpay12345@gmail.com</p>
           <a href="/" class="btn btn-primary">Home</a>
         </div>
-        <div class="card-footer text-muted">
+        <div class="card-header1">
             <p>
               Copyright &copy; 2022
             </p>
