--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -22,6 +22,7 @@
 
         <nav class="navbar">
             <a id="home" href="/">Home</a>
+            <a id="home" href="/addUser">Add User</a>
         </nav>
 
         <div id="menu-btn" class="fas fa-bars"></div>
