--- a/views/history.ejs
+++ b/views/history.ejs
@@ -1,25 +1,31 @@
 <%- include('partials/header')%>
+<div class="history-body">
+    <div class="page-heading">
+          <h2>History</h2>
+    </div>
+  
+    <div class="table">
+        <table>
+            <tr id="headings">
+                <td>Name</td>
+                <td>Amount</td>
+                <td>Activity</td>
+            </tr>
+            <% people.forEach((item)=>{%>
+            <form action="/delete/<%= item._id %>" method="post">
+                <tr>
+                    <td><%= item.name %> </td>
+                    <td><%= item.amount %></td>
+                    <td>
+                        <button type="submit" class="delete-btn">Delete</button>
+                    </td>
+                </tr>
+            </form>
+            <% }) %>
 
-<div class="table">
-    <table>
-        <tr id="headings">
-            <td>Name</td>
-            <td>Amount</td>
-            <td>Activity</td>
-        </tr>
-        <% people.forEach((item)=>{%>
-        <form action="/delete/<%= item._id %>" method="post">
-        <tr>
-            <td><%= item.name %> </td>
-            <td><%= item.amount %></td>
-            <td>
-                <button type="submit" class="delete-btn">Delete</button>
-            </td>
-        </tr>
-        </form>
-        <% }) %>
-
-    </table>
+        </table>
+    </div>
 </div>
+
 
 <%- include('partials/footer')%>
