--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -22,7 +22,8 @@
 
         <nav class="navbar">
             <a id="home" href="/">Home</a>
-            <a id="home" href="/addUser">Add User</a>
+            <a id="home" href="/addUser">Add_User</a>
+            <a id="home" href="/customers">Customers</a>
         </nav>
 
         <div id="menu-btn" class="fas fa-bars"></div>
