--- a/views/user.ejs
+++ b/views/user.ejs
@@ -1,11 +1,18 @@
 <%- include('partials/header')%>
 <section class="transaction">
+    <div class="page-heading">
+        <h2>Add User</h2>
+  </div>
     <div class="form-container">
      <form action="/addUser" method="post" class="transaction-form">
 
         <div class="name input">
             <label for="name" style="font-weight: bold;">Name of person:</label>
             <input type="text" name="name" id="name" class="input-form" placeholder="Enter Name" required>
+        </div>
+        <div class="name input">
+            <label for="name" style="font-weight: bold;">Email of person:</label>
+            <input type="text" name="email" id="name" class="input-form" placeholder="Enter Email" required>
         </div>
 
         <div class="amount input">
